--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,5 @@ S3method(confint,ba_analysis)
 S3method(print,ba_analysis)
 export(add_confint)
 export(compare_methods)
+export(plot_BA)
+importFrom(ggplot2,aes)
