--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,6 @@ S3method(print,ba_analysis)
 export(add_confint)
 export(compare_methods)
 export(plot_BA)
+export(plot_normalized_log_BA)
 importFrom(ggplot2,aes)
+importFrom(rlang,.data)
