--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,6 @@ export(add_confint)
 export(compare_methods)
 export(plot_BA)
 export(plot_normalized_log_BA)
+export(plot_residuals)
 importFrom(ggplot2,aes)
 importFrom(rlang,.data)
