--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(add_BA_stats_geom_manual)
 export(add_confint)
 export(compare_methods)
 export(plot_BA)
-export(plot_normalized_log_BA)
-export(plot_residuals)
+export(plot_BA_normalized_log)
+export(plot_BA_residuals)
 importFrom(ggplot2,aes)
 importFrom(rlang,.data)
