--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,5 +9,6 @@ export(compare_methods)
 export(plot_BA)
 export(plot_BA_normalized_log)
 export(plot_BA_residuals)
+export(plot_BA_scatter)
 importFrom(ggplot2,aes)
 importFrom(rlang,.data)
