--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(add_BA_stats_geom_manual)
 export(add_confint)
 export(compare_methods)
 export(plot_BA)
+export(plot_BA_complete)
 export(plot_BA_normalized_log)
 export(plot_BA_residuals)
 export(plot_BA_scatter)
