--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,6 +26,7 @@ Suggests:
     vdiffr,
     testthat (>= 3.0.0),
     knitr,
-    quarto
+    quarto,
+    rmarkdown
 Config/testthat/edition: 3
-VignetteBuilder: quarto
+VignetteBuilder: quarto, knitr
