add simulate data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,5 +12,7 @@ export(plot_BA_combine)
 export(plot_BA_normalized_log)
 export(plot_BA_residuals)
 export(plot_BA_scatter)
+export(simulate_measurement)
+export(simulate_repeated_data)
 importFrom(ggplot2,aes)
 importFrom(rlang,.data)
