--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,6 +29,7 @@ Suggests:
     knitr,
     quarto,
     rmarkdown,
-    litedown
+    litedown,
+    dplyr
 Config/testthat/edition: 3
 VignetteBuilder: quarto
