--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,4 @@
-url: http://jenevoldsen.com/BAtrending/
+url: https://johannesne.github.io/BAtrending/
 template:
   bootstrap: 5
   light-switch: true
