plot_BA -> BA_plot for consistancy

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,15 +2,15 @@
 
 S3method(as.data.frame,ba_analysis)
 S3method(print,ba_analysis)
+export(BA_plot)
+export(BA_plot_combine)
+export(BA_plot_normalized_log)
+export(BA_plot_residuals)
+export(BA_plot_scatter)
 export(BA_table)
 export(add_BA_stats_geom_manual)
 export(add_confint)
 export(compare_methods)
-export(plot_BA)
-export(plot_BA_combine)
-export(plot_BA_normalized_log)
-export(plot_BA_residuals)
-export(plot_BA_scatter)
 export(simulate_measurement)
 export(simulate_repeated_data)
 importFrom(ggplot2,aes)
